--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 .container {
   height: 100%;
-  background-color: #110A1D;
+  background-color: #110a1d;
   padding-top: 16px;
   display: flex;
   justify-content: center;
@@ -26,15 +26,17 @@ body {
 .header {
   width: 1640px;
   height: 96px;
-  border: 4px solid #478BF9;
+  border: 4px solid #478bf9;
   border-radius: 64px;
   padding: 24px 48px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #110A1D; }
+  background-color: #110a1d;
+  z-index: 4; }
   .header__logo {
-    width: 287px; }
+    width: 287px;
+    cursor: pointer; }
   .header__navigation {
     width: 588px;
     height: 36px;
@@ -42,7 +44,7 @@ body {
     display: flex;
     justify-content: space-between; }
     .header__navigation_list-item {
-      color: #FFFFFF;
+      color: #ffffff;
       font-size: 16px; }
   .header__login {
     width: 287px;
@@ -51,16 +53,16 @@ body {
     align-items: center;
     justify-content: space-between; }
     .header__login_button {
-      border: 2px solid #9DADF2;
+      border: 2px solid #9dadf2;
       padding: 14px;
       background-color: transparent;
       border-radius: 24px;
       display: flex;
       align-items: center; }
     .header__login_button:last-of-type {
-      background-color: #478BF9; }
+      background-color: #478bf9; }
     .header__login_button-text {
-      color: #FFFFFF;
+      color: #ffffff;
       text-transform: uppercase; }
 
 .section {
@@ -71,14 +73,45 @@ body {
   align-items: center; }
   .section__first-box {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    width: 669px;
+    height: 368px;
+    justify-content: space-between; }
+    .section__first-box_title {
+      text-transform: uppercase;
+      color: #ffffff;
+      font-size: 96px;
+      line-height: 96px;
+      font-weight: 500; }
+      .section__first-box_title-span {
+        color: #478bf9; }
+    .section__first-box_paragraph {
+      font-size: 32px;
+      line-height: 32px;
+      color: #ffffff;
+      font-weight: 500;
+      opacity: 60%; }
+    .section__first-box_button {
+      width: 393px;
+      height: 72px;
+      border: 0px solid #478bf9;
+      background-color: #478bf9;
+      border-radius: 48px;
+      padding: 20px 72px 20px 72px;
+      font-weight: 600;
+      font-size: 24px;
+      color: #ffffff;
+      cursor: pointer; }
   .section__moving-box {
     width: 334px;
     display: flex;
     justify-content: space-between; }
     .section__moving-box-first {
       display: flex;
-      flex-direction: column; }
+      flex-direction: column;
+      transition: all 4s ease;
+      transform: translateY(200px);
+      animation: move 4s infinite linear; }
       .section__moving-box-first-image {
         opacity: 20%;
         margin-bottom: 16px;
@@ -97,14 +130,86 @@ body {
         opacity: 40%;
         margin-bottom: 16px;
         width: 99px; }
+  .section__last-box {
+    display: flex;
+    flex-direction: column;
+    width: 531px;
+    height: 659px;
+    text-align: center; }
+    .section__last-box_title {
+      font-weight: 600;
+      font-size: 40px;
+      line-height: 40px;
+      color: #ffffff;
+      margin-bottom: 24px; }
+    .section__last-box_scroll-box {
+      width: 531px;
+      height: 595px;
+      border: 3px solid #478bf9;
+      border-radius: 100px;
+      padding: 24px 24px 24px 24px;
+      background-color: #ffffff1f;
+      overflow: auto;
+      display: flex;
+      flex-direction: row; }
+      .section__last-box_scroll-box_mini-box-one_container {
+        padding-bottom: 16px; }
+        .section__last-box_scroll-box_mini-box-one_container_text-box {
+          width: 467px;
+          height: 114px;
+          padding: 16px 64px 16px 64px;
+          background-color: #478bf9;
+          display: flex;
+          flex-direction: column;
+          align-items: start;
+          justify-content: space-between;
+          border-radius: 196px; }
+          .section__last-box_scroll-box_mini-box-one_container_text-box_text {
+            color: #ffffff;
+            text-align: left;
+            font-size: 24px;
+            line-height: 28px; }
+          .section__last-box_scroll-box_mini-box-one_container_text-box_date {
+            color: #ffffff;
+            opacity: 60%;
+            font-size: 14px;
+            line-height: 16px;
+            font-weight: 450; }
+    .section__last-box_mini-box-two {
+      position: relative; }
+    .section__last-box_scroll-box::-webkit-scrollbar {
+      width: 0px; }
 
+.scrollbar {
+  width: 8px;
+  height: 403px;
+  background-color: #ffffff1f;
+  border: 0px solid #478bf9;
+  border-radius: 10px;
+  position: absolute; }
+
+.scroller {
+  width: 8px;
+  height: 40px;
+  color: #478bf9;
+  background-color: #478bf9;
+  border: 0px solid #478bf9;
+  border-radius: 10px; }
+
+@keyframes move {
+  0% {
+    transform: translateY(0px); }
+  100% {
+    transform: translateY(200px); } }
 .footer {
   width: 100%;
   height: 130px;
   padding: 40px 140px 24px 140px;
-  border: 4px solid #478BF9;
+  border: 4px solid #478bf9;
   border-radius: 64px 64px 0 0;
-  border-bottom: none; }
+  border-bottom: none;
+  background-color: #110a1d;
+  z-index: 4; }
   .footer__box {
     height: 66px;
     display: flex;
@@ -115,7 +220,7 @@ body {
       display: flex;
       justify-content: space-between; }
       .footer__box-links-link {
-        color: #FFFFFF; }
+        color: #ffffff; }
     .footer__box-socials {
       width: 312px;
       height: 66px;
@@ -124,7 +229,7 @@ body {
       justify-content: space-between;
       flex-direction: column; }
       .footer__box-socials-text {
-        color: #FFFFFF;
+        color: #ffffff;
         text-align: end; }
       .footer__box-socials-links {
         display: flex;
